Se realizan los ajustes solicitados por los Gestores de Repositorio

--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -5,4 +5,4 @@ h2  Resultados de <br>aprendizaje
     .card-body
         ul.bg-color-dark
             li 
-                span 210601023-02 - Aplicar procesos y procedimientos organizacionales según normatividad.
+                span 210601023-02. Aplicar procesos y procedimientos organizacionales según normatividad.
