--- a/source/pug/pages/1-tema.pug
+++ b/source/pug/pages/1-tema.pug
@@ -249,5 +249,4 @@
                 h2.naranja Departamento Administrativo Nacional de Estadística - DANE
                 img.img-a.mt-5(src="assets/images/pages/ilustraciones/img12.svg", alt="").img-fluid
                 p.mt-3 Es la entidad responsable de la planeación, levantamiento, procesamiento, análisis y difusión de las estadísticas oficiales de Colombia. Dentro de su labor, usa la información financiera del SUI para el cálculo de cuentas nacionales y la información de facturación para aplicarla al modelo de estratificación. También integra información en el Sistema Estadístico Nacional – SEN (SUI, 2020).
-
-                                                                
+        section.mt-5                                                       
