--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -2,7 +2,7 @@
     .header-ecored
         h1 2. Planeación, seguimiento y comunicación en la organización
     .jumbotron.bg-white
-        .sub-ecored#11.mt-5
+        .sub-ecored#21.mt-5
             h2 2.1 Planes de trabajo en la organización 
         img.img-a.mt-5(src="assets/images/pages/ilustraciones/img13.jpg", alt="").img-fluid
         p.mt-5 A partir del diagnóstico organizacional y operativo se establecen las bases para formular el plan de trabajo que conduzcan al mejoramiento de la organización.  
@@ -129,12 +129,12 @@
                 .hr1
         .row.justify-content-center.align-items-center.mt-5
             .col-8.gris
-                p Si desea ampliar información sobre la formulación de básica de proyectos se recomienda revisar en contenido descargable.                
+                p Si desea ampliar información sobre la formulación básica de proyectos se recomienda revisar el contenido descargable.                
                 a(href="media/documentos/A3_Formulacion_de_proyectos.docx" target="_blank").media-link      
                     img(src="assets/images/icons/icon_pdf.svg", alt="").media-link-icon
                     .media-link-title
                         p #[strong Anexo 3]. Formulación de proyectos
-        .sub-ecored#12.mt-5
+        .sub-ecored#22.mt-5
             h2 2.2 Seguimiento, monitoreo y canales de comunicación en la organización
         img.img-a.mt-5(src="assets/images/pages/ilustraciones/img19.jpg", alt="").img-fluid
         img.img-a.mt-5(src="assets/images/pages/ilustraciones/img20.svg", alt="").img-fluid 
